--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "DT NFC Identifier",
-    "slug": "dt-nfc-identifier",
+    "name": "DT NFC Transponder Identifier",
+    "slug": "dt-nfc-transponder-identifier",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -19,10 +19,13 @@
     },
     "android": {
       "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#000000"
       },
       "package": "com.dangerousthings.nfcidentifier",
-      "permissions": ["android.permission.NFC"]
+      "permissions": [
+        "android.permission.NFC"
+      ]
     },
     "plugins": [
       [
@@ -37,6 +40,11 @@
           "systemCodes": []
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "7a861d96-e2ff-4bfd-92ec-f9e792d739e6"
+      }
+    }
   }
 }
