--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "react-native-dt-theme": "file:../react-native-dt-theme",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
     "babel-preset-expo": "~54.0.10",
@@ -24,6 +23,7 @@
     "expo-status-bar": "^3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-dt-theme": "file:react-native-dt-theme-0.2.0.tgz",
     "react-native-nfc-manager": "^3.17.2",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
